<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SubRegionsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_uraba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/color_background_dark"
                app:cardCornerRadius="200dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:id="@+id/rtly_uraba"
                    android:layout_width="340dp"
                    android:layout_height="340dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_uraba2" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/color_text_onsecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="@string/subregion_uraba"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_occidente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/color_background_dark"
                app:cardCornerRadius="200dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:id="@+id/rtly_occidente"
                    android:layout_width="340dp"
                    android:layout_height="340dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_occidente_3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/color_text_onsecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="@string/subregion_occidente"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_suroeste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/color_background_dark"
                app:cardCornerRadius="200dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:id="@+id/rtly_suroeste"
                    android:layout_width="340dp"
                    android:layout_height="340dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_suroeste_3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/color_text_onsecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="@string/subregion_suroeste"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_norte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/color_background_dark"
                app:cardCornerRadius="200dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:id="@+id/rtly_norte"
                    android:layout_width="340dp"
                    android:layout_height="340dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_norte_3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/color_text_onsecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="@string/subregion_norte"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_valle_aburra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/color_background_dark"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:id="@+id/rtly_valle_aburra"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_valle_aburra_3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/color_text_onsecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="@string/subregion_valleaburra"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bajo_cauca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/color_background_dark"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:id="@+id/rtly_bajo_cauca"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_bajo_cauca_3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/color_text_onsecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="@string/subregion_bajocauca"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_magdalena_medio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/color_background_dark"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:id="@+id/rtly_magdalena_medio"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_magdalena_medio_3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/color_text_onsecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="@string/subregion_megdalenamedio"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_nordeste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/color_background_dark"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:id="@+id/rtly_nordeste"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_nordeste_3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/color_text_onsecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="@string/subregion_nordeste"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_oriente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/color_background_dark"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:id="@+id/rtly_oriente"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_oriente_3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/color_text_onsecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="@string/subregion_oriente"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</FrameLayout>